# PathVLM

./: .gitignore  AGENTS.md  README.md  code_plan.md  pyproject.toml
configs/: run_config.json  run_config_8n_patch.json  run_config_spcs_patch.json  run_config_spcs_tissue.json  run_config_template.json
data_splits/Breast_tissue_6fold/: split_manifest.json
data_splits/Breast_tissue_6fold/fold_0/: test_split.csv  train_split.csv  val_split.csv
data_splits/Breast_tissue_6fold/fold_1/: test_split.csv  train_split.csv  val_split.csv
data_splits/Breast_tissue_6fold/fold_2/: test_split.csv  train_split.csv  val_split.csv
data_splits/Breast_tissue_6fold/fold_3/: test_split.csv  train_split.csv  val_split.csv
data_splits/Breast_tissue_6fold/fold_4/: test_split.csv  train_split.csv  val_split.csv
data_splits/Breast_tissue_6fold/fold_5/: test_split.csv  train_split.csv  val_split.csv
scripts/: 01_prepare_data.py  02_train_image.py  03_train_visual.py  04_train_multimodal.py  05_compare_results.py  05_evaluate_all.py  05_summarize_results.py  06_summarize_results.py  run_config.json  run_pipeline.py  run_pipeline_parallel.sh
src/: __init__.py  config.py  data_loaders.py  data_preparation.py  evaluation.py  models.py  results_discovery.py  training.py  visualization.py
