[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathvlm"
version = "0.1.0"
description = "Multi-modal gene expression prediction from spatial transcriptomics data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "safetensors>=0.4",
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools]
packages = ["src"]
